# my-fastapi-app

./: README.md  pyproject.toml
app/api/: __init__.py
app/models/: __init__.py
